<resources>
    <string name="app_name">남원 E-케어</string>
    <string name="login_with_phone">휴대폰 번호 로그인하기</string>
    <string name="login_with_face">안면인식 로그인하기</string>
    <string name="register_with_face">안면인식 등록하기</string>
    <string name="empty_face_result">얼굴 촬영이 필요합니다.</string>
    <string name="unregistered_user">등록되지 않은 사용자입니다.</string>
    <string name="login_fail_message">사용자 정보를 확인할 수 없습니다.</string>
    <string name="face_too_close">조금 멀리 얼굴을 보여주세요.</string>
    <string name="face_too_far">조금 가까이 얼굴을 보여주세요.</string>
    <string name="face_unclear">카메라를 정면으로 비추고 너무 어둡거나 역광이 있는 곳을 피해 주세요.\n전면 카메라 렌즈를 깨끗이 닦아주세요.</string>

    <string name="main_title">UFace Bank 비대면 계좌개설</string>
    <string name="camera_title">얼굴 등록</string>

    <string name="start">시작하기</string>
    <string name="complete">완료</string>
    <string name="cancel">취소</string>
    <string name="register">등록</string>
    <string name="next">다음</string>

    <string name="intro_sub_title">UFace Bank Mobile</string>
    <string name="intro_title"><b>비대면 계좌 개설</b></string>
    <string name="intro_desc01">스마트폰만 있으면,\n영업점, 은행 방문 없이 계좌개설 OK~!!\n어디서든 스마트폰으로 편리하게\n증권사, 은행 계좌 만드세요.</string>
    <string name="intro_desc02"><b>스마트한 생활 UFace Bank Mobile</b></string>

    <string name="select_idcard_type">시작하기 전,\n<b>신분증 타입을 선택해 주세요.</b></string>
    <string name="idcard_nid">주민등록증</string>
    <string name="idcard_dl">운전면허증</string>
    <string name="idcard_passport">여권</string>

    <string name="camera_main"><b>얼굴 등록을 통한 본인 확인 절차를 진행합니다.</b></string>
    <string name="camera_desc_title"><b>[얼굴 등록 진행 절차 안내]</b></string>
    <string name="camera_desc01">얼굴 등록이 시작되면 화면 정면의 얼굴모양\n가이드에 얼굴을 맞춰 주세요.</string>
    <string name="camera_desc02">얼굴이 정상 인식되면 정면 사진을 자동으로\n촬영합니다.</string>
    <string name="camera_desc03">등록자가 부정 등록(사진 또는 동영상)을\n방지하기 위하여 라이브 체크를 진행합니다.</string>
    <string name="camera_desc04">부정 등록 방지는 라이브 체크 외 AI기술을\n활용한 추가 검증을 진행합니다.</string>

    <string name="camera_front">얼굴을 가이드라인에 맞춰 주세요</string>
    <string name="camera_turn">화살표 방향으로 얼굴을 돌려주세요</string>
    <string name="camera_eye_blink">카메라를 응시하고 눈을 깜빡여 주세요</string>

    <string name="error">얼굴등록 중 부정 등록 의심 사례가\n검출되었습니다.\n다시 시도해 주시기 바랍니다.</string>

    <string name="complete_title"><b>계좌 개설 신청 완료</b></string>
    <string name="complete_desc">계좌 개설 신청이 정상 처리되었습니다.\n서류심사 통과 여부는 담당자를 통해\n개별적으로 연락 드립니다.</string>
    <string name="complete_thanku">감사합니다.</string>

    <string name="str_sample_app_name">RobiV Id Recognizer</string>
    <string name="str_btn_stoptscan">Cancel</string>
    <string name="str_btn_rotatescan">modechange</string>
    <string name="str_guide_text">샘플 텍스트 입니다.</string>
    <string name="str_title_text">신분증/여권</string>
    <string name="atr_auto_manual">auto/manual</string>
    <string name="str_card_type">Card Type</string>
    <string name="str_a4_type">A4 Type</string>
</resources>