<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.metsakuur.lemondemo.CommonHeader
        android:id="@+id/customHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/main_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/customHeader">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/select_idcard_type"
            android:textColor="@color/title_black"
            android:textSize="24dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.metsakuur.lemondemo.CustomRadioButton
                android:id="@+id/rbNId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/select_list"
                android:button="@drawable/ic_idcard"
                android:text="주민등록증"
                android:checked="true"
                android:textColor="@color/font_black"
                android:textSize="16dp" />

            <com.metsakuur.lemondemo.CustomRadioButton
                android:id="@+id/rbDid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/select_list"
                android:button="@drawable/ic_idcard"
                android:text="운전면허증"
                android:textColor="@color/font_black"
                android:textSize="16dp" />

            <com.metsakuur.lemondemo.CustomRadioButton
                android:id="@+id/rbPassport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/select_list"
                android:button="@drawable/ic_idcard"
                android:text="여권"
                android:textColor="@color/font_black"
                android:textSize="16dp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:text="@string/cancel"
            android:textColor="@color/font_black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="@drawable/btn_black"
            android:text="@string/next"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>