<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="36dp">

    <ImageView
        android:id="@+id/ciImageView"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/namwon_ci"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ciImageView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_semibold"
            android:text="휴대폰 번호"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/phoneEt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/et_border"
            android:inputType="number"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="비밀번호"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/et_border"
            android:inputType="textPassword"
            android:textSize="20dp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_red"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/login_with_phone"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_grey"
            android:fontFamily="@font/pretendard_regular"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>