<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right">

    <FrameLayout
        android:id="@+id/viewmainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C0C0C0"></FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:background="#00FFFFFF"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvUpside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_guide_text"
                android:textAlignment="center" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/switch_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom">

            <Switch
                android:id="@+id/switch_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:checked="true"
                android:text="@string/atr_auto_manual"
                android:textColor="#D50000"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_capture"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/btn_manual"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginLeft="100dp"
                android:checked="true"
                android:text="캡쳐"
                android:textColor="#D50000"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="?attr/actionBarSize"
            android:paddingBottom="10dp">

            <ToggleButton
                android:id="@+id/rotateCameraButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="48dp"
                android:background="@drawable/rotate_camera"
                android:textOff=""
                android:textOn=""
                android:visibility="gone"
                tools:ignore="TouchTargetSizeCheck" />

            <ToggleButton
                android:id="@+id/rotateToggleButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="128dp"
                android:background="@drawable/rotate_toggle_img"
                android:textOff=""
                android:textOn=""
                android:visibility="gone"
                tools:ignore="TouchTargetSizeCheck" />

            <ToggleButton
                android:id="@+id/expandToggleButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="48dp"
                android:background="@drawable/expand"
                android:textOff=""
                android:textOn=""
                android:visibility="gone"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/capture_view_controls"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:paddingBottom="10dp">

            <RadioGroup
                android:id="@+id/radio_paper"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/capture_card_rdbtn"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/str_card_type"
                    android:textColor="#D50000"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/capture_a4_rdbtn"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/str_a4_type"
                    android:textColor="#D50000"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>